2025-12-11T00:46:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20118103581 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 487 1517 / 490 1521
* notice: next accum: outdated-unq outdated-all / unq all: 488 1518 / 490 1521
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-26] / []

2025-12-10T00:46:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20083376027 # 834
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-10
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 487 1517 / 489 1519
* notice: next accum: outdated-unq outdated-all / unq all: 487 1517 / 490 1521
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-12-09]

2025-12-09T00:44:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20047862161 # 833
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-09
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 486 1516 / 489 1519
* notice: next accum: outdated-unq outdated-all / unq all: 487 1517 / 489 1519
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-24] / []

2025-12-07T00:50:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19996644263 # 831