@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-11T00:46:02Z",
+  "timestamp" : "2025-12-14T00:51:14Z",
   "count_outdated" : 1518,
   "uniques_outdated" : 488,
-  "count" : 1521,
-  "uniques" : 490,
+  "count" : 1522,
+  "uniques" : 491,
   "views" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
