@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2025-12-09T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
