@@ -1,3 +1,12 @@
+2025-12-14T00:51:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20200304726 # 838
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-14
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 488 1518 / 490 1521
+* notice: next accum: outdated-unq outdated-all / unq all: 488 1518 / 491 1522
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-13]
+
 2025-12-11T00:46:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20118103581 # 835
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
